--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/world.world
+EditorStartupMap=/Game/world2.world2
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -9,8 +9,8 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/MyGameInstanceBP.MyGameInstanceBP_C
-GameDefaultMap=/Game/world.world
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/world2.world2
 ServerDefaultMap=/Game/world.world
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
@@ -48,7 +48,7 @@ SoundCueCookQualityIndex=-1
 r.Mobile.ShadingPath=0
 r.Mobile.AllowDeferredShadingOpenGL=False
 r.Mobile.SupportGPUScene=False
-r.Mobile.AntiAliasing=1
+r.Mobile.AntiAliasing=0
 r.Mobile.FloatPrecisionMode=0
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.VirtualTextures=False
@@ -245,4 +245,8 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/Engine.AudioSettings]
+GlobalMaxPitchScale=111.000000
+GlobalMinPitchScale=0.010000
 
