--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=053D373A493BAA7FA4A082ACCE8C3F56
+ProjectName=SN0801
+ProjectVersion=.0.8.0.1
+CompanyName=sunraylmtd
+Homepage=jke.pw
+
