--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -250,3 +250,6 @@ ManualIPAddress=
 GlobalMaxPitchScale=111.000000
 GlobalMinPitchScale=0.010000
 
+[/Script/Engine.PhysicsSettings]
+DefaultTerminalVelocity=100000.000000
+
